# dose3

./: .gitlab-ci.yml  CHANGES  dose3.opam  dune-project
debian/: README.source  apt-cudf.README.Debian  apt-cudf.conf  apt-cudf.dirs  apt-cudf.install  apt-cudf.manpages  apt-cudf.postinst  apt-cudf.prerm  apt-cudf.triggers  changelog  clean  control  copyright  dose-builddebcheck.NEWS  dose-builddebcheck.install  dose-builddebcheck.manpages  dose-distcheck.NEWS  dose-distcheck.install  dose-distcheck.links  dose-distcheck.manpages  dose-doc.doc-base.apt-cudf  dose-doc.doc-base.dose-distcheck  dose-doc.doc-base.libdose3-ocaml-dev  dose-doc.docs  dose-extra.NEWS  dose-extra.docs  dose-extra.install  dose-extra.manpages  dose3-copyright  rules  update-cudf-solvers  watch
debian/patches/: 0001-Fix-dependency-cycle.patch  0001-Fix-different-nan-version-integer-between-32-and-64-.patch  0001-Fix-expected-test-outputs-following-update-of-ocamlg.patch  0001-add-test-dependencies-and-CI-job-to-test-their-corre.patch  ocamlgraph186  series
debian/tests/: bug790422  bug811569  bug867104  bug896084  control  dose-builddebcheck  dose-debcheck  dose-outdated
debian/tests/repos/: Packages1  Packages_896084  Sources1  Sources_896084  weird.fields.Packages
debian/upstream/: metadata
doc/manpages/: Makefile  apt-cudf-get.rst  apt-cudf.conf.rst  apt-cudf.rst  dose-builddebcheck.rst  dose-ceve.rst  dose-challenged.rst  dose-deb-coinstall.rst  dose-distcheck.rst  dose-outdated.rst  smallworld.rst  strongdeps.rst
src/algo/: depsolver.ml  dune
src/algo/tests/: tests.ml
src/applications/: ceve.ml  dose-tests.py  dune
src/common/: cudfAdd.ml  cudfAdd.mli  dune
src/deb/: debcudf.ml  dune
src/opam2/: dune
src/pef/: dune  pefcudf.ml
tests/DebianPackages/: deb_buildcheck_profiles_sources  dune
